<resources>
    <string name="app_name">TurkiyeDenemeleri</string>
    <string name="welcomeMessage">Türkiye Denemelerine Hoşgeldiniz</string>
    <string name="acceptTD"> Türkiye Denemeleri <a href="http://www.google.com">Hizmet Koşulları ve Gizlilik Politikası\'nı</a> onaylamak için \"Onayla ve devam et\"a dokunun.
    </string>
    <string name="accaptandcontinue">ONAYLA VE DEVAM ET</string>
    <string name="permission_sms_rationale">Otomatik Tamamlama için Türkiye Denemeleri\n SMSinizi okumak istiyor.</string>
    <string name="button_allow">İzin Ver</string>
    <string name="button_deny">Reddet</string>
    <string name="profil_bilgisi">Profil Bilgisi</string>
    <string name="profil_desc">Lütfen gerekli bilgileri doldurunuz ve bir profil fotoğrafı seçiniz</string>
    <string name="kadi_girin">Kullanıcı Adı Giriniz</string>
    <string name="ileri">İLERİ</string>
    <string name="ilsec">Lütfen Bir İl Seçiniz</string>
    <string-array name="iller">
        <item>Lütfen Bir İl Seçiniz</item>
        <item>ADANA</item>
        <item>ADIYAMAN</item>
        <item>AFYONKARAHİSAR</item>
        <item>AĞRI</item>
        <item>AMASYA</item>
        <item>ANKARA</item>
        <item>ANTALYA</item>
        <item>ARTVİN</item>
        <item>AYDIN</item>
        <item>BALIKESİR</item>
        <item>BİLECİKK</item>
        <item>BİNGÖL</item>
        <item>BİTLİS</item>
        <item>BOLU</item>
        <item>BURDUR</item>
        <item>BURSA</item>
        <item>ÇANAKKALE</item>
        <item>ÇANKIRI</item>
        <item>ÇORUM</item>
        <item>DENİZLİ</item>
        <item>DİYARBAKIR</item>
        <item>EDİRNE</item>
        <item>ELAZIĞ</item>
        <item>ERZİNCAN</item>
        <item>ERZURUM</item>
        <item>ESKİŞEHİR</item>
        <item>GAZİANTEP</item>
        <item>GİRESUN</item>
        <item>GÜMÜŞHANE</item>
        <item>HAKKARİ</item>
        <item>HATAY</item>
        <item>ISPARTA</item>
        <item>MERSİN</item>
        <item>İSTANBUL</item>
        <item>İZMİR</item>
        <item>KARS</item>
        <item>KASTAMONU</item>
        <item>KAYSERİ</item>
        <item>KIRKLARELİ</item>
        <item>KIRŞEHİR</item>
        <item>KOCAELİ</item>
        <item>KONYA</item>
        <item>KÜTAHYA</item>
        <item>MALATYA</item>
        <item>MANİSA</item>
        <item>KAHRAMANMARAŞ</item>
        <item>MARDİN</item>
        <item>MUĞLA</item>
        <item>MUŞ</item>
        <item>NEVŞEHİR</item>
        <item>NİĞDE</item>
        <item>ORDU</item>
        <item>RİZE</item>
        <item>SAKARYA</item>
        <item>SAMSUN</item>
        <item>SİİRT</item>
        <item>SİNOP</item>
        <item>SİVAS</item>
        <item>TEKİRDAĞ</item>
        <item>TOKAT</item>
        <item>TRABZON</item>
        <item>TUNCELİ</item>
        <item>ŞANLIURFA</item>
        <item>UŞAK</item>
        <item>VAN</item>
        <item>YOZGAT</item>
        <item>ZONGULDAK</item>
        <item>AKSARAY</item>
        <item>BAYBURT</item>
        <item>KARAMAN</item>
        <item>KIRIKKALE</item>
        <item>BATMAN</item>
        <item>ŞIRNAK</item>
        <item>BARTIN</item>
        <item>ARDAHAN</item>
        <item>IĞDIR</item>
        <item>YALOVA</item>
        <item>KARABüK</item>
        <item>KİLİS</item>
        <item>OSMANİYE</item>
        <item>DÜZCE</item>
        }
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
