<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.turkiyedenemeleri.customviews.TDTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/profil_bilgisi"
            android:textColor="@color/section_text"
            android:textSize="@dimen/font_xlarge"
            app:tvFontName="Regular.otf" />

        <com.turkiyedenemeleri.customviews.TDTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/profil_desc"
            android:textSize="@dimen/font_xlarge"
            app:tvFontName="Regular.otf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/avatar_contact"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <com.turkiyedenemeleri.customviews.TDEditText
                android:id="@+id/TDEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="25dp"
                android:hint="@string/kadi_girin"
                android:maxLength="15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.turkiyedenemeleri.customviews.TDTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="8dp"
                android:text="Cinsiyet :"
                android:textSize="@dimen/font_xlarge"
                app:tvFontName="Regular.otf" />

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_kadın"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="Kadın" />

                <RadioButton
                    android:id="@+id/rb_erkek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Erkek" />

            </RadioGroup>


        </LinearLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:entries="@array/iller"
            android:prompt="@string/ilsec" />
    </LinearLayout>

    <com.turkiyedenemeleri.customviews.TDButton
        android:id="@+id/regisbutton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_accept"
        android:text="@string/ileri"
        android:textSize="@dimen/font_btn" />
</FrameLayout>